# legacy_cpp_wrappers

./: CMakeLists.txt  jShot.sln
Debug/: JThreadPool.lib  common.lib  jShot.exp  jShot.ilk  jShot.lib
JThreadPool/: CMakeLists.txt  JThreadPool.vcxproj  JThreadPool.vcxproj.filters
JThreadPool/Debug/: CL.read.1.tlog  CL.write.1.tlog  JThreadPool.lastbuildstate  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  lib.command.1.tlog  vc100.idb  vc120.idb
JThreadPool/Debug/JThreadPool.tlog/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  lib.command.1.tlog
JThreadPool/src/: CJThreadPool.cpp  CJThreadPool.h
additionaly/: CJScreenShot.cpp  CJScreenShot.h  CJpegCompress.h  CScreenshot.cpp  ExportJShot.def  LibJpeg.cpp  LibJpeg.h  jDll.cpp  jDll.h  myMgr.h
cmake/: DirectXConfig.cmake  FindDirectX.cmake  FindDirectX9.cmake  FindDirectX9Ext.cmake
common/: CNet.cpp  CNet.h  CNetConnect.cpp  CNetConnect.h  CNetOptions.h  CNetTcp.cpp  CNetTcp.h  CNetUdp.cpp  CNetUdp.h  CSocket.cpp  CSocket.h  ComPort.cpp  ComPort.h  Common.cpp  Common.h  DataCache.cpp  DataCache.h  Error.cpp  Error.h  Lockable.cpp  Lockable.h  Logger.cpp  Logger.h  MLString.cpp  MLString.h  PasswordArray.cpp  PasswordArray.h  PasswordKeeper.cpp  PasswordKeeper.h  Pool.h  Queue.h  Registry.cpp  Registry.h  Thread.cpp  Thread.h  Timer.cpp  Timer.h  Variant.cpp  Variant.h  auto_array.h  (+12 more)
common/Debug/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  common.lastbuildstate  lib.command.1.tlog  vc100.idb
jShot/: CMakeLists.txt  jShot.vcxproj  jShot.vcxproj (Конфликтующая копия с компьютера kovalexius-PC 2013-11-05).filters  jShot.vcxproj.filters
jShot/Debug/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  jShot.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog  vc100.idb  vc120.idb
jShot/Debug/jShot.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  jShot.lastbuildstate
jShot/libjpeg/: jcapimin.h  jccoefct.h  jccolor.cpp  jccolor.h  jchuff.cpp  jcinit.cpp  jcmainct.cpp  jcmarker.h  jcmaster.cpp  jcmaster.h  jcparam.cpp  jcprepct.h  jcsample.cpp  jcsample.h  jdatadst.cpp  jfdctflt.h  jfdctfst.cpp  jfdctint.cpp  jfdctint.h  jmemmgr.cpp  jmemnobs.cpp  jmemsys.h  jmorecfg.h  jutils.h  jversion.h
jShot/src/: CJScreenShot.cpp  CJScreenShot.h  CJpegCompress.cpp  CJpegCompress.h  CScreenshot.h  DDrawScreenShooter.cpp  DDrawScreenShooter.h  DXScreenShooter.cpp  DXScreenShooter.h  GDIScreenShooter.cpp  GDIScreenShooter.h  LibJpeg1.h  ddraw_decode_error.cpp  ddraw_decode_error.h  jDll.cpp  jDll.h  jDll1.cpp
jShot/src/types/: geometry_types.cpp  geometry_types.h
libjpeg/: jaricom.h  jcapimin.cpp  jcarith.cpp  jcarith.h  jccoefct.cpp  jcdctmgr.cpp  jcdctmgr.h  jcinit.h  jcmainct.h  jcmarker.cpp  jcomapi.cpp  jcomapi.h  jconfig.h  jcparam.h  jcprepct.cpp  jdatadst.h  jerror.cpp  jerror.h  jfdctflt.cpp  jfdctfst.h  jinclude.h  jmemmgr.h  jmemnobs.h  jpegint.h  jutils.cpp
testJShot/: testJShot.cpp  testJShot.vcxproj.filters
testJShot/Debug/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog  vc100.idb  vc120.idb
testJShot/Debug/testJShot.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog
testString/: testString.csproj
testString/Properties/: AssemblyInfo.cs
tests/: testGDI.cpp  testJShot.cpp  testJShot.vcxproj
types/: geometry_types.cpp  geometry_types.h
